Frankbelford/uatv1ba/force-app/main/default/objects/Preferred_Candidate__c/Preferred_Candidate__c.object-meta.xml
<CustomObject>
    <label>Preferred Candidate</label>
    <nameField>
        <displayFormat>PC{0000000000}</displayFormat>
        <label>Preferred Candidate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>