Frankbelford/uatv1ba/force-app/main/default/objects/Preferred_Candidate__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Preferred Candidates</relationshipLabel>
    <relationshipName>Preferred_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>