Frankbelford/uatv1ba/force-app/main/default/objects/Preferred_Candidate__c/fields/Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Job_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order</label>
    <referenceTo>sirenum__JobOrder__c</referenceTo>
    <relationshipLabel>Preferred Candidates</relationshipLabel>
    <relationshipName>Preferred_Candidates</relationshipName>
    <type>Lookup</type>
</CustomField>