Frankbelford/uatv1ba/force-app/main/default/objects/Preferred_Candidate__c/fields/Priority_Number__c.field-meta.xml
<CustomField>
    <fullName>Priority_Number__c</fullName>
    <label>Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>