Frankbelford/uatv1ba/force-app/main/default/objects/Preferred_Candidate__c/fields/Worker_Name__c.field-meta.xml
<CustomField>
    <fullName>Worker_Name__c</fullName>
    <formula>Candidate__r.FirstName + &quot; &quot; +  Candidate__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Worker Name</label>
    <type>Text</type>
</CustomField>